--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 />
 
+<button onclick="toggleTheme()">🌙 Toggle Theme</button>
+
 <style>
 body {
   margin:0;
@@ -32,6 +34,7 @@ header {
   padding:15px;
   text-align:center;
 }
+  
 button, select {
   padding:10px;
   margin:5px;
@@ -56,6 +59,8 @@ audio {
 </style>
 </head>
 
+
+  
 <body>
 
 <header>
