--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <button onclick="toggleTheme()">🌙 Toggle Theme</button>
 
+
+
 <style>
 body {
   margin:0;
@@ -22,6 +24,15 @@ body {
   background:#0f172a;
   color:white;
 }
+
+body.light {
+  background:#f1f5f9;
+  color:#111;
+}
+body.light .feed {
+  background:#e2e8f0;
+}
+  
 header {
   padding:15px;
   text-align:center;
